新增按讚文件與調整關連資料 (一定要用陣列)
