# model/posts.js
@@ -18,16 +18,38 @@ const PostRequiredFormat = {
     type: String,
     default: '',
   },
+  // likes: {
+  //   type: Array,
+  //   default: [],
+  // },
   likes: [
     {
       type: mongoose.Schema.ObjectId,
-      ref: "user", // id 要去找 user 的那張表的 ID
-    },
+      ref: 'user', // id 要去找 user 的那張表的 ID
+    }
   ],
+  // likes: [
+  //   {
+  //     type: mongoose.Schema.ObjectId,
+  //     ref: 'user', // id 要去找 user 的那張表的 ID
+  //     // like: {
+  //     // },
+  //     // createAt: {
+  //     //   type: Date,
+  //     //   default: Date.now,
+  //     // }
+  //     // like: {
+  //     //   likeID: {
+  //         // type: mongoose.Schema.ObjectId,
+  //         // ref: 'user', // id 要去找 user 的那張表的 ID
+  //     //   }
+  //     // }
+  //   }
+  // ],
   createAt: {
     type: Date,
     default: Date.now,
-    select: true,  // 設定回傳時間呈現
+    select: true, // 設定回傳時間呈現
     /** mongoos 自定時間搓
      * 寫入 db 時間轉成 UTC 時間（+0）
      * 從 db 拿回來的 UTC（+0）時間要轉回當地時間
@@ -45,7 +67,7 @@ const schemaOptions = {
 const postsSchema = new mongoose.Schema(PostRequiredFormat, schemaOptions);
 postsSchema.virtual('comments', {
   ref: 'Comment', // 指向 Comment Model
-  foreignField: 'post', // 指向 DB posts collection 
+  foreignField: 'post', // 指向 DB posts collection
   localField: '_id',
 });
 const posts = mongoose.model('Post', postsSchema);
